projects/options/src/app/app.component.scss
:host {
  display: flex;
  flex-direction: column;
  position: absolute;
  inset: 0;
}

:host.is-mobile {
  mat-toolbar {
    position: fixed;
    /* Make sure the toolbar will stay on top of the content as it scrolls past. */
    z-index: 2;
  }

  mat-sidenav-container {
    flex: 1 0 auto;
  }
}
.spacer {
  flex: 1 1 auto;
}

mat-form-field {
  width: 100%;
}

textarea {
  resize: vertical;
}

code {
  border: 1px inset var(--mat-sys-outline-variant);
}

pre,
code {
  margin: 0;
  white-space: pre-wrap;
}

.page-content {
  display: flex;
  align-items: center;
  flex-direction: column;
  margin: auto;
  overflow: auto;
  height: 100%;
  padding-inline: 1rem;
}

h1 {
  margin: 0;
}

.main-section {
  padding-top: 0.5rem;
  width: 100%;
  max-width: 50rem;
}

.about-section {
  margin-bottom: 3rem;

  section:not(:last-of-type) {
    border-bottom: 1px inset var(--mat-sys-outline-variant);
  }
}

.header-icon {
  margin-left: 0.25rem;
}

code,
textarea.code-editor-textarea {
  font-family: 'Roboto Mono', Courier, monospace;
}

@keyframes highlight {
  0% {
    background-color: var(--mat-sys-secondary-container);
  }

  100% {
    background-color: revert;
  }
}

section:target mat-card {
  animation: highlight 1s ease-out 0.15s;
}

mat-card-actions > button {
  margin-right: 0.5rem;
}

mat-sidenav {
  a {
    text-decoration: none;
  }
}

mat-sidenav-content {
  scroll-behavior: smooth;
}


:host h3 {
  margin-top: 1rem;
}

.toolbar-actions {
  display: flex;
  gap: 0.5rem;
}

.title-large {
  font: var(--mat-sys-title-large);
  letter-spacing: var(--mat-sys-title-large-tracking);
}

